--- a/compiladores/instalando-o-babel/package.json
+++ b/compiladores/instalando-o-babel/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "babel script.js --watch --out-dir ./dist"
+    "build": "babel script.js --out-dir ./dist",
+    "dev": "babel script.js --watch --out-dir ./dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.2",
